src/com/davidmogar/njc/syntactic/y.output
   0  $accept : program $end

   1  program : functions
   2          | declarations functions

   3  statement : function_call ';'
   4            | declaration ';'
   5            | if
   6            | while
   7            | read ';'
   8            | return ';'
   9            | write ';'
  10            | assignment ';'

  11  statements : statement
  12             | statements statement

  13  array_position : '[' expression ']'
  14                 | '[' expression ']' array_position

  15  array_access : IDENTIFIER array_position

  16  array_declaration : type array_position identifiers

  17  assignment : IDENTIFIER '=' expression
  18             | array_access '=' expression

  19  declaration : type identifiers
  20              | array_declaration

  21  declarations : declarations declaration ';'
  22               | declaration ';'

  23  identifiers : IDENTIFIER
  24              | IDENTIFIER ',' identifiers

  25  block : '{' '}'
  26        | '{' statements '}'

  27  function : type function_name '(' ')' block
  28           | type function_name '(' function_parameters ')' block

  29  functions : function
  30            | function functions

  31  function_call : IDENTIFIER '(' ')'
  32                | IDENTIFIER '(' expressions ')'

  33  function_name : IDENTIFIER
  34                | MAIN

  35  function_parameters : type IDENTIFIER
  36                      | type IDENTIFIER ',' function_parameters

  37  else : ELSE statement
  38       | ELSE block

  39  if_statement : IF '(' expression ')' statement
  40               | IF '(' expression ')' statement else

  41  if_block : IF '(' expression ')' block
  42           | IF '(' expression ')' block else

  43  if : if_statement
  44     | if_block

  45  while : WHILE '(' expression ')' block

  46  value_holders : IDENTIFIER
  47                | array_access
  48                | IDENTIFIER ',' value_holders
  49                | array_access ',' value_holders

  50  read : READ value_holders

  51  return : RETURN expression

  52  write : WRITE expressions

  53  logic_expression : expression AND expression
  54                   | expression EQUALS expression
  55                   | expression GREATER_EQUALS expression
  56                   | expression LOWER_EQUALS expression
  57                   | expression NOT_EQUALS expression
  58                   | '!' expression

  59  expression : expression '+' expression
  60             | expression '-' expression
  61             | expression '*' expression
  62             | expression '/' expression
  63             | '(' expression ')'
  64             | '-' expression
  65             | '(' type ')' expression
  66             | logic_expression
  67             | array_access
  68             | function_call
  69             | literal
  70             | IDENTIFIER

  71  expressions : expression
  72              | expressions ',' expression

  73  literal : CHARACTER_LITERAL
  74          | DOUBLE_LITERAL
  75          | INTEGER_LITERAL
  76          | STRING_LITERAL

  77  type : CHARACTER
  78       | DOUBLE
  79       | INTEGER
  80       | STRING
  81       | VOID

state 0
	$accept : . program $end  (0)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	STRING  shift 4
	VOID  shift 5
	.  error

	program  goto 6
	functions  goto 7
	declarations  goto 8
	declaration  goto 9
	array_declaration  goto 10
	type  goto 11
	function  goto 12


state 1
	type : CHARACTER .  (77)

	.  reduce 77


state 2
	type : DOUBLE .  (78)

	.  reduce 78


state 3
	type : INTEGER .  (79)

	.  reduce 79


state 4
	type : STRING .  (80)

	.  reduce 80


state 5
	type : VOID .  (81)

	.  reduce 81


state 6
	$accept : program . $end  (0)

	$end  accept


state 7
	program : functions .  (1)

	.  reduce 1


state 8
	program : declarations . functions  (2)
	declarations : declarations . declaration ';'  (21)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	STRING  shift 4
	VOID  shift 5
	.  error

	functions  goto 13
	declaration  goto 14
	array_declaration  goto 10
	type  goto 11
	function  goto 12


state 9
	declarations : declaration . ';'  (22)

	';'  shift 15
	.  error


state 10
	declaration : array_declaration .  (20)

	.  reduce 20


state 11
	array_declaration : type . array_position identifiers  (16)
	declaration : type . identifiers  (19)
	function : type . function_name '(' ')' block  (27)
	function : type . function_name '(' function_parameters ')' block  (28)

	MAIN  shift 16
	IDENTIFIER  shift 17
	'['  shift 18
	.  error

	array_position  goto 19
	identifiers  goto 20
	function_name  goto 21


state 12
	functions : function .  (29)
	functions : function . functions  (30)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	STRING  shift 4
	VOID  shift 5
	$end  reduce 29

	functions  goto 22
	type  goto 23
	function  goto 12


state 13
	program : declarations functions .  (2)

	.  reduce 2


state 14
	declarations : declarations declaration . ';'  (21)

	';'  shift 24
	.  error


state 15
	declarations : declaration ';' .  (22)

	.  reduce 22


state 16
	function_name : MAIN .  (34)

	.  reduce 34


state 17
	identifiers : IDENTIFIER .  (23)
	identifiers : IDENTIFIER . ',' identifiers  (24)
	function_name : IDENTIFIER .  (33)

	','  shift 25
	'('  reduce 33
	';'  reduce 23


state 18
	array_position : '[' . expression ']'  (13)
	array_position : '[' . expression ']' array_position  (14)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 35
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 19
	array_declaration : type array_position . identifiers  (16)

	IDENTIFIER  shift 39
	.  error

	identifiers  goto 40


state 20
	declaration : type identifiers .  (19)

	.  reduce 19


state 21
	function : type function_name . '(' ')' block  (27)
	function : type function_name . '(' function_parameters ')' block  (28)

	'('  shift 41
	.  error


state 22
	functions : function functions .  (30)

	.  reduce 30


state 23
	function : type . function_name '(' ')' block  (27)
	function : type . function_name '(' function_parameters ')' block  (28)

	MAIN  shift 16
	IDENTIFIER  shift 42
	.  error

	function_name  goto 21


state 24
	declarations : declarations declaration ';' .  (21)

	.  reduce 21


state 25
	identifiers : IDENTIFIER ',' . identifiers  (24)

	IDENTIFIER  shift 39
	.  error

	identifiers  goto 43


state 26
	literal : CHARACTER_LITERAL .  (73)

	.  reduce 73


state 27
	literal : DOUBLE_LITERAL .  (74)

	.  reduce 74


state 28
	literal : INTEGER_LITERAL .  (75)

	.  reduce 75


state 29
	literal : STRING_LITERAL .  (76)

	.  reduce 76


state 30
	array_access : IDENTIFIER . array_position  (15)
	function_call : IDENTIFIER . '(' ')'  (31)
	function_call : IDENTIFIER . '(' expressions ')'  (32)
	expression : IDENTIFIER .  (70)

	'('  shift 44
	'['  shift 18
	AND  reduce 70
	EQUALS  reduce 70
	GREATER_EQUALS  reduce 70
	LOWER_EQUALS  reduce 70
	NOT_EQUALS  reduce 70
	'+'  reduce 70
	'-'  reduce 70
	'*'  reduce 70
	'/'  reduce 70
	')'  reduce 70
	';'  reduce 70
	']'  reduce 70
	','  reduce 70

	array_position  goto 45


state 31
	logic_expression : '!' . expression  (58)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 46
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 32
	expression : '-' . expression  (64)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 47
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 33
	expression : '(' . expression ')'  (63)
	expression : '(' . type ')' expression  (65)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING  shift 4
	VOID  shift 5
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 48
	array_access  goto 36
	type  goto 49
	logic_expression  goto 37
	literal  goto 38


state 34
	expression : function_call .  (68)

	.  reduce 68


state 35
	array_position : '[' expression . ']'  (13)
	array_position : '[' expression . ']' array_position  (14)
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	AND  shift 50
	EQUALS  shift 51
	GREATER_EQUALS  shift 52
	LOWER_EQUALS  shift 53
	NOT_EQUALS  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	']'  shift 59
	.  error


state 36
	expression : array_access .  (67)

	.  reduce 67


state 37
	expression : logic_expression .  (66)

	.  reduce 66


state 38
	expression : literal .  (69)

	.  reduce 69


state 39
	identifiers : IDENTIFIER .  (23)
	identifiers : IDENTIFIER . ',' identifiers  (24)

	','  shift 25
	';'  reduce 23


state 40
	array_declaration : type array_position identifiers .  (16)

	.  reduce 16


state 41
	function : type function_name '(' . ')' block  (27)
	function : type function_name '(' . function_parameters ')' block  (28)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	STRING  shift 4
	VOID  shift 5
	')'  shift 60
	.  error

	type  goto 61
	function_parameters  goto 62


state 42
	function_name : IDENTIFIER .  (33)

	.  reduce 33


state 43
	identifiers : IDENTIFIER ',' identifiers .  (24)

	.  reduce 24


state 44
	function_call : IDENTIFIER '(' . ')'  (31)
	function_call : IDENTIFIER '(' . expressions ')'  (32)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	')'  shift 63
	.  error

	function_call  goto 34
	expression  goto 64
	array_access  goto 36
	expressions  goto 65
	logic_expression  goto 37
	literal  goto 38


state 45
	array_access : IDENTIFIER array_position .  (15)

	.  reduce 15


state 46
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	logic_expression : '!' expression .  (58)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	EQUALS  shift 51
	GREATER_EQUALS  shift 52
	LOWER_EQUALS  shift 53
	NOT_EQUALS  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	AND  reduce 58
	')'  reduce 58
	';'  reduce 58
	']'  reduce 58
	','  reduce 58


state 47
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)
	expression : '-' expression .  (64)

	'*'  shift 57
	'/'  shift 58
	AND  reduce 64
	EQUALS  reduce 64
	GREATER_EQUALS  reduce 64
	LOWER_EQUALS  reduce 64
	NOT_EQUALS  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	')'  reduce 64
	';'  reduce 64
	']'  reduce 64
	','  reduce 64


state 48
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)
	expression : '(' expression . ')'  (63)

	AND  shift 50
	EQUALS  shift 51
	GREATER_EQUALS  shift 52
	LOWER_EQUALS  shift 53
	NOT_EQUALS  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	')'  shift 66
	.  error


state 49
	expression : '(' type . ')' expression  (65)

	')'  shift 67
	.  error


state 50
	logic_expression : expression AND . expression  (53)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 68
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 51
	logic_expression : expression EQUALS . expression  (54)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 69
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 52
	logic_expression : expression GREATER_EQUALS . expression  (55)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 70
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 53
	logic_expression : expression LOWER_EQUALS . expression  (56)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 71
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 54
	logic_expression : expression NOT_EQUALS . expression  (57)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 72
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 55
	expression : expression '+' . expression  (59)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 73
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 56
	expression : expression '-' . expression  (60)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 74
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 57
	expression : expression '*' . expression  (61)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 75
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 58
	expression : expression '/' . expression  (62)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 76
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 59
	array_position : '[' expression ']' .  (13)
	array_position : '[' expression ']' . array_position  (14)

	'['  shift 18
	AND  reduce 13
	EQUALS  reduce 13
	GREATER_EQUALS  reduce 13
	IDENTIFIER  reduce 13
	LOWER_EQUALS  reduce 13
	NOT_EQUALS  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'*'  reduce 13
	'/'  reduce 13
	')'  reduce 13
	';'  reduce 13
	']'  reduce 13
	'='  reduce 13
	','  reduce 13

	array_position  goto 77


state 60
	function : type function_name '(' ')' . block  (27)

	'{'  shift 78
	.  error

	block  goto 79


state 61
	function_parameters : type . IDENTIFIER  (35)
	function_parameters : type . IDENTIFIER ',' function_parameters  (36)

	IDENTIFIER  shift 80
	.  error


state 62
	function : type function_name '(' function_parameters . ')' block  (28)

	')'  shift 81
	.  error


state 63
	function_call : IDENTIFIER '(' ')' .  (31)

	.  reduce 31


state 64
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)
	expressions : expression .  (71)

	AND  shift 50
	EQUALS  shift 51
	GREATER_EQUALS  shift 52
	LOWER_EQUALS  shift 53
	NOT_EQUALS  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	')'  reduce 71
	';'  reduce 71
	','  reduce 71


state 65
	function_call : IDENTIFIER '(' expressions . ')'  (32)
	expressions : expressions . ',' expression  (72)

	')'  shift 82
	','  shift 83
	.  error


state 66
	expression : '(' expression ')' .  (63)

	.  reduce 63


state 67
	expression : '(' type ')' . expression  (65)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 84
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 68
	logic_expression : expression . AND expression  (53)
	logic_expression : expression AND expression .  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	EQUALS  shift 51
	GREATER_EQUALS  shift 52
	LOWER_EQUALS  shift 53
	NOT_EQUALS  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	AND  reduce 53
	')'  reduce 53
	';'  reduce 53
	']'  reduce 53
	','  reduce 53


state 69
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression EQUALS expression .  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	AND  reduce 54
	EQUALS  reduce 54
	GREATER_EQUALS  reduce 54
	LOWER_EQUALS  reduce 54
	NOT_EQUALS  reduce 54
	')'  reduce 54
	';'  reduce 54
	']'  reduce 54
	','  reduce 54


state 70
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression GREATER_EQUALS expression .  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	AND  reduce 55
	EQUALS  reduce 55
	GREATER_EQUALS  reduce 55
	LOWER_EQUALS  reduce 55
	NOT_EQUALS  reduce 55
	')'  reduce 55
	';'  reduce 55
	']'  reduce 55
	','  reduce 55


state 71
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression LOWER_EQUALS expression .  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	AND  reduce 56
	EQUALS  reduce 56
	GREATER_EQUALS  reduce 56
	LOWER_EQUALS  reduce 56
	NOT_EQUALS  reduce 56
	')'  reduce 56
	';'  reduce 56
	']'  reduce 56
	','  reduce 56


state 72
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	logic_expression : expression NOT_EQUALS expression .  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	AND  reduce 57
	EQUALS  reduce 57
	GREATER_EQUALS  reduce 57
	LOWER_EQUALS  reduce 57
	NOT_EQUALS  reduce 57
	')'  reduce 57
	';'  reduce 57
	']'  reduce 57
	','  reduce 57


state 73
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression '+' expression .  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	'*'  shift 57
	'/'  shift 58
	AND  reduce 59
	EQUALS  reduce 59
	GREATER_EQUALS  reduce 59
	LOWER_EQUALS  reduce 59
	NOT_EQUALS  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	')'  reduce 59
	';'  reduce 59
	']'  reduce 59
	','  reduce 59


state 74
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression '-' expression .  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)

	'*'  shift 57
	'/'  shift 58
	AND  reduce 60
	EQUALS  reduce 60
	GREATER_EQUALS  reduce 60
	LOWER_EQUALS  reduce 60
	NOT_EQUALS  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	')'  reduce 60
	';'  reduce 60
	']'  reduce 60
	','  reduce 60


state 75
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression '*' expression .  (61)
	expression : expression . '/' expression  (62)

	.  reduce 61


state 76
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)
	expression : expression '/' expression .  (62)

	.  reduce 62


state 77
	array_position : '[' expression ']' array_position .  (14)

	.  reduce 14


state 78
	block : '{' . '}'  (25)
	block : '{' . statements '}'  (26)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	STRING  shift 4
	VOID  shift 5
	IF  shift 85
	WHILE  shift 86
	READ  shift 87
	RETURN  shift 88
	WRITE  shift 89
	IDENTIFIER  shift 90
	'}'  shift 91
	.  error

	statement  goto 92
	function_call  goto 93
	declaration  goto 94
	if  goto 95
	while  goto 96
	read  goto 97
	return  goto 98
	write  goto 99
	assignment  goto 100
	statements  goto 101
	array_access  goto 102
	array_declaration  goto 10
	type  goto 103
	if_statement  goto 104
	if_block  goto 105


state 79
	function : type function_name '(' ')' block .  (27)

	.  reduce 27


state 80
	function_parameters : type IDENTIFIER .  (35)
	function_parameters : type IDENTIFIER . ',' function_parameters  (36)

	','  shift 106
	')'  reduce 35


state 81
	function : type function_name '(' function_parameters ')' . block  (28)

	'{'  shift 78
	.  error

	block  goto 107


state 82
	function_call : IDENTIFIER '(' expressions ')' .  (32)

	.  reduce 32


state 83
	expressions : expressions ',' . expression  (72)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 108
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 84
	logic_expression : expression . AND expression  (53)
	logic_expression : expression . EQUALS expression  (54)
	logic_expression : expression . GREATER_EQUALS expression  (55)
	logic_expression : expression . LOWER_EQUALS expression  (56)
	logic_expression : expression . NOT_EQUALS expression  (57)
	expression : expression . '+' expression  (59)
	expression : expression . '-' expression  (60)
	expression : expression . '*' expression  (61)
	expression : expression . '/' expression  (62)
	expression : '(' type ')' expression .  (65)

	.  reduce 65


state 85
	if_statement : IF . '(' expression ')' statement  (39)
	if_statement : IF . '(' expression ')' statement else  (40)
	if_block : IF . '(' expression ')' block  (41)
	if_block : IF . '(' expression ')' block else  (42)

	'('  shift 109
	.  error


state 86
	while : WHILE . '(' expression ')' block  (45)

	'('  shift 110
	.  error


state 87
	read : READ . value_holders  (50)

	IDENTIFIER  shift 111
	.  error

	array_access  goto 112
	value_holders  goto 113


state 88
	return : RETURN . expression  (51)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 114
	array_access  goto 36
	logic_expression  goto 37
	literal  goto 38


state 89
	write : WRITE . expressions  (52)

	CHARACTER_LITERAL  shift 26
	DOUBLE_LITERAL  shift 27
	INTEGER_LITERAL  shift 28
	STRING_LITERAL  shift 29
	IDENTIFIER  shift 30
	'!'  shift 31
	'-'  shift 32
	'('  shift 33
	.  error

	function_call  goto 34
	expression  goto 64
	array_access  goto 36
	expressions  goto 115
	logic_expression  goto 37
	literal  goto 38


state 90
	array_access : IDENTIFIER . array_position  (15)
	assignment : IDENTIFIER . '=' expression  (17)
	function_call : IDENTIFIER . '(' ')'  (31)
	function_call : IDENTIFIER . '(' expressions ')'  (32)

	'('  shift 44
	'['  shift 18
	'='  shift 116
	.  error

	array_position  goto 45


state 91
	block : '{' '}' .  (25)

	.  reduce 25


state 92
	statements : statement .  (11)

	.  reduce 11


state 93
	statement : function_call . ';'  (3)

	';'  shift 117
	.  error


state 94
	statement : declaration . ';'  (4)

	';'  shift 118
	.  error


state 95
	statement : if .  (5)

	.  reduce 5


state 96
	statement : while .  (6)

	.  reduce 6


state 97
	statement : read . ';'  (7)

	';'  shift 119
	.  error


state 98
	statement : return . ';'  (8)

	';'  shift 120
	.  error


state 99
	statement : write . ';'  (9)

	';'  shift 121
	.  error


state 100
	statement : assignment . ';'  (10)

	';'  shift 122
	.  error


state 101
	statements : statements . statement  (12)
	block : '{' statements . '}'  (26)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	STRING  shift 4
	VOID  shift 5
	IF  shift 85
	WHILE  shift 86
	READ  shift 87
	RETURN  shift 88
	WRITE  shift 89
	IDENTIFIER  shift 90
	'}'  shift 123
	.  error

	statement  goto 124
	function_call  goto 93
	declaration  goto 94
	if  goto 95
	while  goto 96
	read  goto 97
	return  goto 98
	write  goto 99
	assignment  goto 100
	array_access  goto 102
	array_declaration  goto 10
	type  goto 103
	if_statement  goto 104
	if_block  goto 105


state 102
	assignment : array_access . '=' expression  (18)

	'='  shift 125
	.  error


state 103
	array_declaration : type . array_position identifiers  (16)
	declaration : type . identifiers  (19)

	IDENTIFIER  shift 39
	'['  shift 18
	.  error

	array_position  goto 19
	identifiers  goto 20


state 104
	if : if_statement .  (43)

	.  reduce 43


state 105
	if : if_block .  (44)

	.  reduce 44


state 106
	function_parameters : type IDENTIFIER ',' . function_parameters  (36)

	CHARACTER  shift 1
	DOUBLE  shift 2
	INTEGER  shift 3
	STRING  shift 4
	VOID  shift 5
	.  error

	type  goto 61
	function_parameters  goto 126


state 107
	function : type function_name '(' function_parameters ')' block .  (28)

	.  reduce 28

